--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "mailtrap": "^4.0.0",
     "mongoose": "^8.12.1",
